--- a/LabWebAppBlazor/Components/Pages/CambiarContraseña.razor
+++ b/LabWebAppBlazor/Components/Pages/CambiarContraseña.razor
@@ -1,5 +1,6 @@
 ﻿@page "/cambiar-contraseña"
 @rendermode InteractiveServer
+<PageTitle>Cambiar Contraseña</PageTitle>
 
 @using LabWebAppBlazor.Models
 @using Microsoft.AspNetCore.Components.Authorization
