--- a/LabWebAppBlazor/Components/Layout/MainLayout.razor
+++ b/LabWebAppBlazor/Components/Layout/MainLayout.razor
@@ -26,11 +26,12 @@
 
 <HeadContent>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-    <script src="ticket.js"></script>
-    <script src="resulado.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="site.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </HeadContent>
+
 
 @code {
     private async Task CerrarSesion()
