--- a/LabWebAppBlazor/Components/Pages/RegistrarUsuario.razor
+++ b/LabWebAppBlazor/Components/Pages/RegistrarUsuario.razor
@@ -1,5 +1,6 @@
 ﻿@page "/registrar-usuario"
 @rendermode InteractiveServer
+<PageTitle>Registro de Usuario</PageTitle>
 
 @using LabWebAppBlazor.Models
 @using System.Security.Claims
@@ -13,7 +14,10 @@
 
 @if (!isRendered)
 {
-    <div class="alert alert-info">Cargando interfaz...</div>
+    <div class="d-flex align-items-center text-primary">
+        <div class="spinner-border me-2" role="status"></div>
+        <strong>Cargando...</strong>
+    </div>
 }
 else if (!showContent)
 {
